// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewrittenSuggestionDetails and RewrittenSuggestionItem RewrittenSuggestionItem should display combined SQL for subsequent items 1`] = `
<div>
  <div
    class="ant-list ant-list-split css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <div
            class="css-13usq5j"
          >
            <span
              aria-label="info-circle"
              class="anticon anticon-info-circle"
              role="img"
              style="font-size: 18px; color: rgb(240, 0, 0);"
            >
              <svg
                aria-hidden="true"
                data-icon="info-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            <div
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line rule-name basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
            >
              不建议LIMIT的偏移OFFSET大于阈值
            </div>
          </div>
          <div
            class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
          >
            <div
              class="css-1igntjv"
            >
              <div
                class="action-items-wrapper"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                  type="button"
                >
                  <span>
                    复 制
                  </span>
                </button>
                <div
                  class="toggle-button-wrapper css-14po76i"
                >
                  查看差异
                </div>
              </div>
              <div
                class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
              >
                <div
                  class="actiontech-diff-sql-view-only-editor-renderer-wrapper custom-diff-monaco-editor css-1esok7i"
                >
                  <input
                    height="500"
                    language="sql"
                    modified="WITH user_ids AS (
    SELECT u.id
    FROM users u
    JOIN orders o ON u.id = o.user_id AND UPPER(o.status) = 'COMPLETED'
    JOIN payments p ON u.id = p.user_id
    WHERE YEAR(u.created_at) = 2023
      AND o.amount > 100
      AND p.status IS NOT NULL
      AND o.description LIKE '%test%'
      AND LOWER(u.email) LIKE '%example%'
)
SELECT *
FROM users u
JOIN orders o ON u.id = o.user_id
JOIN payments p ON u.id = p.user_id
WHERE u.id IN (SELECT id FROM user_ids)
ORDER BY RAND(), p.created_at DESC
LIMIT 1000 OFFSET 500;
"
                    options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"renderOverviewRuler":false,"readOnly":true}"
                    original="
    SELECT *
FROM users u
JOIN orders o ON u.id = o.user_id AND UPPER(o.status) = 'COMPLETED'
JOIN payments p ON u.id = p.user_id
WHERE YEAR(u.created_at) = 2023
  AND o.amount > '100'
  AND p.status IS NOT NULL
  AND o.description LIKE '%test%'
  OR LOWER(u.email) LIKE '%example%'
ORDER BY RAND(), p.created_at DESC
LIMIT 1000 OFFSET 500;
  "
                    theme="editorCustomTheme"
                    value=""
                  />
                </div>
              </div>
              <div
                class="css-14chl4v"
              >
                <div
                  class="description-content css-2p8eea"
                  rehypeplugins="() => jest.fn()"
                >
                  我们将使用WITH表表达式来先获取主键ID，然后再联接获取完整数据。具体步骤如下：
1. 使用WITH表表达式来查询满足条件的用户ID。
2. 通过这些用户ID来获取完整的用户、订单和支付信息。
3. 确保结果集保持与原始SQL相同，包括结果集的顺序。

                </div>
              </div>
            </div>
          </div>
          <div
            class="css-3a45f5"
          >
            <span
              aria-label="info-circle"
              class="anticon anticon-info-circle"
              role="img"
              style="font-size: 18px; color: rgb(240, 0, 0);"
            >
              <svg
                aria-hidden="true"
                data-icon="info-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            <div
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line rule-name basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
            >
              禁止对索引列进行数学运算和使用函数
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`RewrittenSuggestionDetails and RewrittenSuggestionItem RewrittenSuggestionItem should handle show SQL difference action 1`] = `
<div>
  <div
    class="css-13usq5j"
  >
    <span
      aria-label="warning"
      class="anticon anticon-warning"
      role="img"
      style="font-size: 18px; color: rgb(255, 140, 0);"
    >
      <svg
        aria-hidden="true"
        data-icon="warning"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
        />
      </svg>
    </span>
    <div
      class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line rule-name basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
    >
      SQL查询条件需要走索引
    </div>
  </div>
  <div
    class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
  >
    <div
      class="css-1igntjv"
    >
      <div
        class="action-items-wrapper"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
          type="button"
        >
          <span>
            复 制
          </span>
        </button>
        <div
          class="toggle-button-wrapper css-1f8xqgy"
        >
          查看差异
        </div>
      </div>
      <div
        class="lazy-load-wrapper lazy-load-wrapper-hidden css-952l0m"
      >
        <div
          class="actiontech-diff-sql-view-only-editor-renderer-wrapper custom-diff-monaco-editor css-1esok7i"
        >
          <input
            height="500"
            language="sql"
            modified="CREATE INDEX idx_created_at ON test.payments (created_at);

WITH tmp AS (
        SELECT u.id
        FROM users u
        JOIN orders o ON u.id = o.user_id AND o.status = 'COMPLETED'
        JOIN payments p ON u.id = p.user_id
        WHERE u.created_at >= '2023-01-01' 
          AND u.created_at < '2024-01-01'
          AND o.amount > 100
          AND p.status IS NOT NULL
          AND o.description LIKE '%test%'
          AND u.email NOT LIKE '%example%'
    )
    SELECT t.id, u.name, u.email, o.id AS order_id, o.amount, p.id AS payment_id, p.created_at
    FROM tmp t
    JOIN orders o ON t.id = o.user_id AND o.status = 'COMPLETED'
    JOIN payments p ON t.id = p.user_id
    ORDER BY p.created_at DESC, o.amount DESC, p.status DESC, o.description DESC, u.email DESC
    LIMIT 1000 OFFSET 500;"
            options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"renderOverviewRuler":false,"readOnly":true}"
            original="
    SELECT *
FROM users u
JOIN orders o ON u.id = o.user_id AND UPPER(o.status) = 'COMPLETED'
JOIN payments p ON u.id = p.user_id
WHERE YEAR(u.created_at) = 2023
  AND o.amount > '100'
  AND p.status IS NOT NULL
  AND o.description LIKE '%test%'
  OR LOWER(u.email) LIKE '%example%'
ORDER BY RAND(), p.created_at DESC
LIMIT 1000 OFFSET 500;
  "
            theme="editorCustomTheme"
            value=""
          />
        </div>
      </div>
      <div
        class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
      >
        <div
          class="custom-monaco-editor-wrapper css-1esok7i"
        >
          <input
            class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor"
            height="500"
            language="sql"
            options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"readOnly":true}"
            value="CREATE INDEX idx_created_at ON test.payments (created_at);

WITH tmp AS (
        SELECT u.id
        FROM users u
        JOIN orders o ON u.id = o.user_id AND o.status = 'COMPLETED'
        JOIN payments p ON u.id = p.user_id
        WHERE u.created_at >= '2023-01-01' 
          AND u.created_at < '2024-01-01'
          AND o.amount > 100
          AND p.status IS NOT NULL
          AND o.description LIKE '%test%'
          AND u.email NOT LIKE '%example%'
    )
    SELECT t.id, u.name, u.email, o.id AS order_id, o.amount, p.id AS payment_id, p.created_at
    FROM tmp t
    JOIN orders o ON t.id = o.user_id AND o.status = 'COMPLETED'
    JOIN payments p ON t.id = p.user_id
    ORDER BY p.created_at DESC, o.amount DESC, p.status DESC, o.description DESC, u.email DESC
    LIMIT 1000 OFFSET 500;"
          />
        </div>
      </div>
      <div
        class="css-14chl4v"
      >
        <div
          class="description-content css-2p8eea"
          rehypeplugins="() => jest.fn()"
        >
          当前查询可能会导致全表扫描，建议为\`payments\`表的\`created_at\`字段创建索引以提升查询性能。
        </div>
        <a
          class="sql-analyze-link"
          href="/sqle/project/700300/exec-workflow/task-123/1/analyze"
          target="_blank"
        >
          在SQL分析中查看当前表结构
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`RewrittenSuggestionDetails and RewrittenSuggestionItem RewrittenSuggestionItem should toggle details visibility on click 1`] = `
<div>
  <div
    class="css-13usq5j"
  >
    <span
      aria-label="info-circle"
      class="anticon anticon-info-circle"
      role="img"
      style="font-size: 18px; color: rgb(240, 0, 0);"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <div
      class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line rule-name basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
    >
      不建议LIMIT的偏移OFFSET大于阈值
    </div>
  </div>
  <div
    class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
  >
    <div
      class="css-1igntjv"
    >
      <div
        class="action-items-wrapper"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
          type="button"
        >
          <span>
            复 制
          </span>
        </button>
        <div
          class="toggle-button-wrapper css-14po76i"
        >
          查看差异
        </div>
      </div>
      <div
        class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
      >
        <div
          class="actiontech-diff-sql-view-only-editor-renderer-wrapper custom-diff-monaco-editor css-1esok7i"
        >
          <input
            height="500"
            language="sql"
            modified="WITH user_ids AS (
    SELECT u.id
    FROM users u
    JOIN orders o ON u.id = o.user_id AND UPPER(o.status) = 'COMPLETED'
    JOIN payments p ON u.id = p.user_id
    WHERE YEAR(u.created_at) = 2023
      AND o.amount > 100
      AND p.status IS NOT NULL
      AND o.description LIKE '%test%'
      AND LOWER(u.email) LIKE '%example%'
)
SELECT *
FROM users u
JOIN orders o ON u.id = o.user_id
JOIN payments p ON u.id = p.user_id
WHERE u.id IN (SELECT id FROM user_ids)
ORDER BY RAND(), p.created_at DESC
LIMIT 1000 OFFSET 500;
"
            options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"renderOverviewRuler":false,"readOnly":true}"
            original="
    SELECT *
FROM users u
JOIN orders o ON u.id = o.user_id AND UPPER(o.status) = 'COMPLETED'
JOIN payments p ON u.id = p.user_id
WHERE YEAR(u.created_at) = 2023
  AND o.amount > '100'
  AND p.status IS NOT NULL
  AND o.description LIKE '%test%'
  OR LOWER(u.email) LIKE '%example%'
ORDER BY RAND(), p.created_at DESC
LIMIT 1000 OFFSET 500;
  "
            theme="editorCustomTheme"
            value=""
          />
        </div>
      </div>
      <div
        class="css-14chl4v"
      >
        <div
          class="description-content css-2p8eea"
          rehypeplugins="() => jest.fn()"
        >
          我们将使用WITH表表达式来先获取主键ID，然后再联接获取完整数据。具体步骤如下：
1. 使用WITH表表达式来查询满足条件的用户ID。
2. 通过这些用户ID来获取完整的用户、订单和支付信息。
3. 确保结果集保持与原始SQL相同，包括结果集的顺序。

        </div>
      </div>
    </div>
  </div>
</div>
`;
